--- a/BTLCsharp/Views/User/Login.cshtml
+++ b/BTLCsharp/Views/User/Login.cshtml
@@ -11,45 +11,51 @@
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
     @Styles.Render("~/Content/Site.css")
+    @Scripts.Render("~/Content/Function.js")
 </head>
 <body>
-    <div class="modal" id="idLogin">
-       
-        @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
+    <div class="wrapperLogin">
+        <div id="idLogin"  class="modal">
 
-        <div class="containerLogin" style="width: 30%;">
-            <span class="close" onclick="return hello();">&times;</span>
-            <h1>Login</h1>
-            <hr />
-            <br />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div>
-                @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "label" })
+            @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="containerLogin" style="width: 30%;">
+                <span class="close" onclick='window.location = "@Url.Action("Wrapper", "Home")";'>&times;</span>
+                <h1>Login</h1>
+                <hr />
+                <br />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div>
-                    @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "inputData" } })
-                    @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "label" })
+                    <div>
+                        @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "inputData" } })
+                        @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div>
-                @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "label" })
                 <div>
-                    @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "inputData" } })
-                    @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                    @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "label" })
+                    <div>
+                        @Html.EditorFor(model => model.password, new { htmlAttributes = new { @class = "inputData" } })
+                        @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-            </div>
 
-            <div>
-                <div style="text-align:center;">
-                    <input type="submit" value="Login" class="btnLogin" />
+                <div>
+                    <div style="text-align:center;">
+                        <input type="submit" value="Login" class="btnLogin" />
+                    </div>
+                </div>
+                <br /><br />
+                <div style="float: right;">
+                    @Html.ActionLink("Go HomePage", "Index", "Home")
                 </div>
             </div>
+    }
+
         </div>
-      }
-
     </div>
-   
 </body>
 </html>
