--- a/BTLCsharp/Views/Audio/quickMode.cshtml
+++ b/BTLCsharp/Views/Audio/quickMode.cshtml
@@ -41,12 +41,34 @@
     <div class="inputText">
         <input type="text" value="" placeholder="Type a first letter " id="inputLetter" onkeyup="checkQuickMode();">
     </div>
-    <div style="text-align: center;">
+    <div style="text-align: center; margin: 20px; font-size: 16px;">
+        <span style="color: blueviolet;">You can use the button : "NextString" to ignore the current blank </span>
         <input type="button" value="NextString" onclick="nextString();" class="btnNext">
+        <br />
+        <br /><br />
+        <div style="color: orange;">
+            <div class="col-1">Your score</div>
+            <div class="col-2">Min: 0</div>
+            <div class="col-6" style="background-color:gray; border-radius: 5px;">
+                <div style=" background-color:orange; border-radius: 5px; color: white; padding: 5px; text-align:right; width: 0%;" id="score"></div>
+            </div>
+            <div class="col-2">Max: <span id="maxScore"></span></div>
+        </div>
+        <div style="clear: both;">
+            <br />
+            <br />
+
+
+            <a id="submitLink" href="/Audio/quickModeSubmit/0"><button class="btnSubmit" style="width: 20%; background-color: #2d4de9">Submit</button></a>
+        </div>
     </div>
     <script>
         var index = 0;
         var listString = document.getElementsByClassName("partString");
+        var maxScoreTag = document.getElementById("maxScore");
+        var maxScrore = (@audio.level * 10 + 100) + listString.length;
+        maxScoreTag.innerHTML = maxScrore;
+        var marked = 0;
         function checkQuickMode() {
             var input = document.getElementById("inputLetter");
             var currentString = listString[index];
@@ -56,6 +78,15 @@
             if (temp2.indexOf(temp1) == 0) {
                 currentString.setAttribute("style", "display: display");
                 index++;
+                marked++;
+                var score = document.getElementById("score");
+                var submitLink = document.getElementById("submitLink");
+                score.innerHTML = Math.floor((marked / listString.length) * maxScrore);
+                var width = Math.floor(marked / listString.length * 100);
+                var style = " background-color:green; border-radius: 5px; color: white; padding: 5px; text-align:right; width:" + width + "%;";
+                score.setAttribute("style", style);
+                var href = "/Audio/quickModeSubmit/" + Math.floor((marked / listString.length) * maxScrore);
+                submitLink.setAttribute("href", href);
                 input.value = "";
             }
             else {
