--- a/BTLCsharp/Views/Shared/_Footer.cshtml
+++ b/BTLCsharp/Views/Shared/_Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<div class="footer">
+<div class="footer hvr-rectangle-out">
     <div class="contentText col-12">
         <div class="contact col-4">
             <div class="line col-12">
