--- a/BTLCsharp/Views/Shared/_Sidebar.cshtml
+++ b/BTLCsharp/Views/Shared/_Sidebar.cshtml
@@ -1,6 +1,6 @@
 ﻿
-<div class="sidebar">
-    <div class="symbol">
+<div class="sidebar hvr-backward">
+    <div class="symbol hvr-grow-shadow">
         <a href="#">
             <img src="~/Content/image/success.jpg" alt="you can do it">
         </a>
