--- a/BTLCsharp/Views/Shared/_Slides.cshtml
+++ b/BTLCsharp/Views/Shared/_Slides.cshtml
@@ -1,4 +1,12 @@
-﻿<!-- Slideshow container -->
+﻿
+
+<script type="text/javascript">
+    window.onload = function () {
+        setInterval(function () { plusSlides(1); }, 2000);
+            };
+</script>
+
+<!-- Slideshow container -->
 <div class="slideshow-container">
 
     <!-- Full-width images with number and caption text -->
