--- a/BTLCsharp/Views/Audio/AudioByCategory.cshtml
+++ b/BTLCsharp/Views/Audio/AudioByCategory.cshtml
@@ -7,7 +7,7 @@
 <div class="contentDetail">
     <br />
     <div style="text-align:center">
-        <span style="text-align:center; padding: 10px 15px; color: purple; font-size: 25px;">Audio By Category</span>
+        <span style="text-align:center; padding: 10px 15px; color: purple; font-size: 25px;" class="tada">Audio By Category</span>
     </div>
     <br />
     @{
@@ -21,7 +21,7 @@
             var audios = ViewBag.audios;
             foreach (var audio in audios)
             {
-                <div class="audio col-6">
+                <div class="audio hvr-pulse-grow col-6">
                     <div class="audioName">
                         <a href="@Url.Action("ListeningModes","Audio", new {id = audio.idAudio, name = audio.meta_AudioName.Replace(" ","-") })">@audio.audioName</a>
                     </div>
