--- a/BTLCsharp/Views/Audio/fullMode.cshtml
+++ b/BTLCsharp/Views/Audio/fullMode.cshtml
@@ -15,7 +15,7 @@
             Level : @audio.level
 
         </div>
-        <div class="nameAudio col-10">
+        <div class="nameAudio swing col-10">
             @audio.audioName
 
         </div>
