--- a/BTLCsharp/Views/Home/Index.cshtml
+++ b/BTLCsharp/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
 <div class="contentDetail">
     <div class="popularAudio">
         @Html.Raw(TempData["msg"])
-        <span class="btnTitle">Popular Audios</span>
+        <span class="btnTitle hvr-pulse-grow">Popular Audios</span>
         <br>
         <br>
         <br>
@@ -23,7 +23,7 @@
                 var showedAudio = audios.Take(20);
                 foreach (var audio in showedAudio)
                 {
-                <div class="audio col-6">
+                <div class="audio hvr-grow-shadow col-6">
                     <div class="audioName">
                         <a href="@Url.Action("ListeningModes","Audio", new {id = audio.idAudio})">@audio.audioName</a>
                     </div>
@@ -40,7 +40,7 @@
         <hr>
         <br />
         <br>
-        <span class="btnTitle">Category</span>
+        <span class="btnTitle hvr-pulse-grow">Category</span>
         <br>
         <br>
         <br>
@@ -53,7 +53,7 @@
                 string url = "~/Content/image/corporateDevelopment.jpg";
 
                 <a href="@Url.Action("AudioByCategory","Audio", new { category = obj.meta_Category.Replace(' ','-') })">
-                    <div class="categoryContent col-5">
+                    <div class="categoryContent hvr-outline-in col-5">
                         <div class="img col-4">
                             <img src="@Url.Content(obj.urlImg)" alt=@obj.urlImg>
                         </div>
