--- a/BTLCsharp/Views/Shared/_Header.cshtml
+++ b/BTLCsharp/Views/Shared/_Header.cshtml
@@ -87,8 +87,9 @@
                 }
             </div>
         </div>
-        <a href="#about">Contact</a>
-        <a href="#about">About</a>
+        <a href="/Audio/ListAudios?page=1">ListAudios</a>
+        <a href="/Home/Contact">Contact</a>
+        <a href="/Home/About">About</a>
         <a href="javascript:void(0);" class="icon" onclick="showNav();">&#9776</a>
 
     </div>
